--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,17 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.6.1",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "expo": "~52.0.46",
-    "expo-av": "^15.0.2",
+    "expo-av": "^15.1.4",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
-    "expo-file-system": "^18.0.12",
+    "expo-file-system": "^18.1.9",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.7",
