--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-voice/voice": "^3.2.4",
     "expo-blur": "^14.0.3",
     "expo-haptics": "^14.0.1"
   }
