--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.9.0",
-    "expo": "~52.0.46",
+    "expo": "52.0.0",
     "expo-av": "^15.1.4",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
