--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.14.1",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "vnpay": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
